--- a/_posts/2014-01-12-blah.md
+++ b/_posts/2014-01-12-blah.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Syntax Highlighting Post
-description: "Demo post displaying the various ways of highlighting code in Markdown."
+title: First Post ('title' attribute)
+description: "This is the 'description' attribute."
 modified: 2013-08-20
 tags: [sample post, code, highlighting]
 image:
@@ -9,10 +9,12 @@ image:
   credit: dargadgetz
   creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
 comments: true
-share: true  
+share: true
 ---
 
-Here is some text. This is a link: [Syntax highlighting](http://en.wikipedia.org/wiki/Syntax_highlighting)
+Here is some text.
+
+This is a link: [Syntax highlighting](http://en.wikipedia.org/wiki/Syntax_highlighting)
 
 ### Here is a level 3 heading
 
@@ -24,6 +26,7 @@ blah blah blah
 
 # Level 2 heading
 
+<!--
 Here is an image: 
 
 ![alt text](https://lh4.googleusercontent.com/-OfCrRsO9tl8/UtFgjdUR_oI/AAAAAAAAh4w/hXwEslupcXk/s400/Screen+Shot+2014-01-11+at+9.17.04+AM.png "i am the title")
@@ -41,15 +44,17 @@ Reference-style:
 
 [logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 2"
 
+-->
 
-    {% raw %}
-    <nav class="pagination" role="navigation">
-        {% if page.previous %}
-            <a href="{{ site.url }}{{ page.previous.url }}" class="btn" title="{{ page.previous.title }}">Previous article</a>
-        {% endif %}
-        {% if page.next %}
-            <a href="{{ site.url }}{{ page.next.url }}" class="btn" title="{{ page.next.title }}">Next article</a>
-        {% endif %}
-    </nav><!-- /.pagination -->
-    {% endraw %}
 
+### side by side, with hover zoom: 
+
+<figure class="half">
+    <a href="https://lh4.googleusercontent.com/-OfCrRsO9tl8/UtFgjdUR_oI/AAAAAAAAh4w/hXwEslupcXk/s1600/Screen+Shot+2014-01-11+at+9.17.04+AM.png">
+        <img src="https://lh4.googleusercontent.com/-OfCrRsO9tl8/UtFgjdUR_oI/AAAAAAAAh4w/hXwEslupcXk/s400/Screen+Shot+2014-01-11+at+9.17.04+AM.png" alt="The alt text">
+    </a>
+    <a href="https://lh4.googleusercontent.com/-OfCrRsO9tl8/UtFgjdUR_oI/AAAAAAAAh4w/hXwEslupcXk/s1600/Screen+Shot+2014-01-11+at+9.17.04+AM.png">
+        <img src="https://lh4.googleusercontent.com/-OfCrRsO9tl8/UtFgjdUR_oI/AAAAAAAAh4w/hXwEslupcXk/s400/Screen+Shot+2014-01-11+at+9.17.04+AM.png" alt="">
+    </a>
+    <figcaption>Two images.</figcaption>
+</figure>
